<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E5A88"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="#FFA500"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="16dp"
        tools:ignore="TextSizeCheck"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/img_2"/>

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#682E5A88"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorLink="#E30D0D"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/height_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/height_in_meter"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColorHint="#43A047"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/weight_in_kg"
            android:inputType="number"
            android:textAlignment="center"
            android:textColorHint="#43A047"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#92673AB7"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textColor="#FFC107"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
