<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page1">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo4"
        android:src="@drawable/img"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:src="@drawable/img_1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image"
        android:layout_marginBottom="68dp"
        android:text="@string/to_bmi_world"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#C903A9F4"
        android:text="@string/continue1"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>